--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,97 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/ant-1.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/asm-attrs.jar"/>
+	<classpathentry kind="lib" path="lib/asm.jar"/>
+	<classpathentry kind="lib" path="lib/barbecue-1.5-beta1.jar"/>
+	<classpathentry kind="lib" path="lib/barcode4j-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/batik-anim.jar"/>
+	<classpathentry kind="lib" path="lib/batik-awt-util.jar"/>
+	<classpathentry kind="lib" path="lib/batik-bridge.jar"/>
+	<classpathentry kind="lib" path="lib/batik-css.jar"/>
+	<classpathentry kind="lib" path="lib/batik-dom.jar"/>
+	<classpathentry kind="lib" path="lib/batik-ext.jar"/>
+	<classpathentry kind="lib" path="lib/batik-gvt.jar"/>
+	<classpathentry kind="lib" path="lib/batik-parser.jar"/>
+	<classpathentry kind="lib" path="lib/batik-script.jar"/>
+	<classpathentry kind="lib" path="lib/batik-svg-dom.jar"/>
+	<classpathentry kind="lib" path="lib/batik-svggen.jar"/>
+	<classpathentry kind="lib" path="lib/batik-util.jar"/>
+	<classpathentry kind="lib" path="lib/batik-xml.jar"/>
+	<classpathentry kind="lib" path="lib/bcel-5.2.jar"/>
+	<classpathentry kind="lib" path="lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/castor-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/cincom-jr-xmla.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-dbcp-1.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-1.7.jar"/>
+	<classpathentry kind="lib" path="lib/commons-javaflow-20060411.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-vfs-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/eigenbase-properties-1.1.0.10924.jar"/>
+	<classpathentry kind="lib" path="lib/eigenbase-resgen-1.3.0.11873.jar"/>
+	<classpathentry kind="lib" path="lib/eigenbase-xom-1.3.0.11999.jar"/>
+	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
+	<classpathentry kind="lib" path="lib/groovy-all-1.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-annotations.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-commons-annotations.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb-1.8.0-10.jar"/>
+	<classpathentry kind="lib" path="lib/iText-2.1.7.jar"/>
+	<classpathentry kind="lib" path="lib/iTextAsian.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta-bcel-20050813.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-chart-themes-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-core-renderer.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-extensions-3.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-fonts-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-htmlcomponent-4.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-jtidy-r938.jar"/>
+	<classpathentry kind="lib" path="lib/javacup.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.4.GA.jar"/>
+	<classpathentry kind="lib" path="lib/jaxen-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/jdt-compiler-3.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.12.jar"/>
+	<classpathentry kind="lib" path="lib/jpa.jar"/>
+	<classpathentry kind="lib" path="lib/js_activation-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/js_axis-1.4patched.jar"/>
+	<classpathentry kind="lib" path="lib/js_commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/js_commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="lib/js_commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/js_jasperserver-common-ws-3.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/js_jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/js_mail-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/js_saaj-api-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/js_wsdl4j-1.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jta.jar"/>
+	<classpathentry kind="lib" path="lib/jxl-2.6.10.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/mondrian-3.2.0-13661-JS.jar"/>
+	<classpathentry kind="lib" path="lib/olap4j-0.9.7.309-JS.jar"/>
+	<classpathentry kind="lib" path="lib/png-encoder-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.6.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.6-20091214.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-9.0-801.jdbc4.jar"/>
+	<classpathentry kind="lib" path="lib/rex-20080421.jar"/>
+	<classpathentry kind="lib" path="lib/rhino-1.7R1.jar"/>
+	<classpathentry kind="lib" path="lib/saaj-api-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-log4j12.jar"/>
+	<classpathentry kind="lib" path="lib/spring.jar"/>
+	<classpathentry kind="lib" path="lib/sqleonardo-2009.03.rc1.jar"/>
+	<classpathentry kind="lib" path="lib/swingx-2007_10_07.jar"/>
+	<classpathentry kind="lib" path="lib/velocity-1.7-dep.jar"/>
+	<classpathentry kind="lib" path="lib/xalan.jar"/>
+	<classpathentry kind="lib" path="lib/xbean.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-ext.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
